--- a/config.json
+++ b/config.json
@@ -15,20 +15,13 @@
 				"template": "eps.source",
 				"urlTemplate": "eps.url"
 			}
-		},
-		{
-		"name" : "Home Page", 
-		"staticPage": {
-        		"urlTemplate": "eps.home",
-        		"template": "eps.url2"
-      		        }	
 		}
 
 	],
 	"ci_config": {
 		"output_directories": ["templates"],
 		"build_setup_cmd": "echo setup",
-		"build_cmd": "echo hello",
+		"build_cmd": "build_cmd": "mkdir desktop && echo \"<html>hello world!</html>\" > desktop/index.html",
 		"serve_setup_cmd": "echo setup",
 		"serve_cmd": "echo serve"
 	}
