--- a/config.json
+++ b/config.json
@@ -19,9 +19,9 @@
 
 	],
 	"ci_config": {
-		"output_directories": ["templates"],
+		"output_directories": ["templates", "desktop"],
 		"build_setup_cmd": "echo setup",
-		"build_cmd": "build_cmd": "mkdir desktop && echo \"<html>hello world!</html>\" > desktop/index.html",
+		"build_cmd": "mkdir desktop && echo \"<html>hello world!</html>\" > desktop/index.html",
 		"serve_setup_cmd": "echo setup",
 		"serve_cmd": "echo serve"
 	}
